--- a/index.html
+++ b/index.html
@@ -81,7 +81,9 @@
     <footer>
       <div class="footer-container">
         <div class="community">
-          <a href="/" class="quote">View Miracles</a>
+          <div class="text">
+            <a href="/" class="quote">View Miracles</a>
+          </div>
           <div class="avatar">
             <img src="./img/avatar.png" alt="avatar" />
             <div class="share-community">
